--- a/bibliography.bib
+++ b/bibliography.bib
@@ -107,7 +107,7 @@ note = { Consulta: Octubre 2018},
 }
 
 @misc{ded3.3,
-  title={Deliverable D3.3},
+  title={Physics-based models for Body Torso, Upper and Lower Extremities},
   author={INRIA},
 
   note={Consulta: Diciembre de 2018},
@@ -115,7 +115,7 @@ note = { Consulta: Octubre 2018},
 }
 
 @misc{ded4.4,
-  title={Deliverable D4.4},
+  title={Training Functions of Simulator},
   author={URJC},
 
   note={Consulta: Diciembre de 2018},
