--- a/herramienta.tex
+++ b/herramienta.tex
@@ -2,25 +2,25 @@
 \section{Herramienta \ac{TPTVPH}}
 \label{rasim:posing}
 
-\new{ La \emph{suite} \ac{ITGVPH} se encargará de generar la base de datos necesaria para que los usuarios puedan entrenar con una variabilidad anatómica extensa. Esto permite al usuario enfrentarse a diferentes tipos de situaciones y mejorar el entrenamiento del procedimiento. En ocasiones el procedimiento médico que se va a realizar necesita que los modelos virtuales disponibles se encuentren en una posición diferente a la postura que presentan. Por ello, surge la necesidad de incluir un algoritmo que adapte un paciente virtual.}
+La \emph{suite} \ac{ITGVPH} se encargará de generar la base de datos necesaria para que los usuarios puedan entrenar con una variabilidad anatómica extensa. Esto permite al usuario enfrentarse a diferentes tipos de situaciones y mejorar el entrenamiento del procedimiento. En ocasiones el procedimiento médico que se va a realizar necesita que los modelos virtuales disponibles se encuentren en una posición diferente a la postura que presentan. Por ello, surge la necesidad de incluir un algoritmo que adapte un paciente virtual.
 
 %
 %Para modificar esa postura, se necesitaría un algoritmo que sea capaz de transformar un modelo virtual con estructuras internas de una pose a otra. Debido que en la mayoría de las ocasiones, no se dispone de todos los tejidos o de sus propiedades mecánicas, este método deberá ser capaz de generar deformaciones plausibles útiles para el entrenamiento.
 
 
 %La tarea 3.5 del \del{ac{WP} 3} define el requisito de que la herramienta \ac{ITGVPH} permita adaptar la posición del paciente virtual creado de una postura inicial a la requerida por el simulador \ac{RASim}. 
-Para ello,  se va a incorporar el algoritmo propuesto, descrito en el capítulo \ref{cap:posing}, a una aplicación llamada \ac{TPTVPH}. Esta herramienta se ha construido para proporcionar una interfaz donde el usuario podrá seleccionar la postura del paciente virtual. De esta forma, un usuario con perfil sanitario podrá seleccionar y validar las posiciones que sean requeridas en el procedimiento médico que se desee simular.
+Para ello,  se va a incorporar el algoritmo propuesto, descrito en el capítulo \ref{cap:posing}, a una aplicación llamada \ac{TPTVPH}. Esta herramienta se ha construido para proporcionar una interfaz donde el usuario pueda seleccionar la postura del paciente virtual. De esta forma, un usuario con perfil sanitario podrá seleccionar y validar las posiciones que sean requeridas en el procedimiento médico que se desee simular.
 
 
 
 %Para ello, se ha habilitado una ventana utilizando la librería \emph{OpenGL}\ref{adsf} y \emph{Qt}\ref{asdf}\todo{revisar} permitiendo al usuario pueda manipular el modelo anatómico desde todas las posiciones que necesite.
 Como primer paso, se ha dotado a la interfaz de una ventana donde el usuario puede observar el modelo anatómico. Con el objetivo de que el usuario pueda confirmar las correctas deformaciones del paciente virtual, el usuario puede interaccionar con la escena. De esta forma, de manera intuitiva el usuario puede utilizar el ratón para mover, rotar, acercar o alejar el modelo y poder supervisar la deformación desde todos los ángulos posibles.
 
-En segundo lugar, para permitir la selección de poses, se ha incluido en la interfaz botones y actuadores, que permite al usuario  seleccionar las articulaciones del \ac{VPH} una a una y definir sus movimientos respecto a los centros de rotaciones calculados (ver sec. \ref{posing:rigging}). El usuario puede revisar poses anteriormente almacenadas, modificarlas y guardarlas de nuevo. También, con el objetivo de introducir movimientos más orgánicos, el sistema permite cargar animaciones provenientes de \ac{MoCap}, o utilizar la tecnología del dispositivo Microsoft Kinect a forma de espejo para definir la postura del \ac{VPH}.
+En segundo lugar, para permitir la selección de poses, se ha incluido en la interfaz botones y actuadores, que permite al usuario seleccionar las articulaciones de\del{l} \ac{VPH} una a una y definir sus movimientos respecto a los centros de rotaciones calculados (ver sec. \ref{posing:rigging}). El usuario puede revisar poses anteriormente almacenadas, modificarlas y guardarlas de nuevo. También, con el objetivo de introducir movimientos más orgánicos, el sistema permite cargar animaciones provenientes de \ac{MoCap}, o utilizar la tecnología del dispositivo Microsoft Kinect a forma de espejo para definir la postura del \ac{VPH}.
 
 Además, se ha incorporado una funcionalidad que permite al usuario decidir si quiere esconder tejidos con la finalidad de contemplar la anatomía interna que estuviera oculta. De esta manera, se permite dejar de \emph{renderizar} la piel o los músculos para contemplar otros órganos.% más profundos. 
 
-Finalmente, se ha delegado la responsabilidad de generar posiciones correctas o realistas al usuario. En la sección \ref{posing:optimizacion}, se presenta una optimización que se apoya en un modelo basado en físicas para mejorar el resultado obtenido. Al ser una etapa no interactiva, solo se activa cuando el usuario decide utilizarla. Una vez terminado el proceso, el usuario podrá observar los resultados y almacenar el paciente virtual obtenido que será utilizado en las demás etapas de la \emph{suite} \ac{ITGVPH}.  
+Finalmente, se ha delegado la responsabilidad de generar posiciones correctas o realistas al usuario. En la sección \ref{posing:optimizacion}, se presenta una etapa optimización que se apoya en un modelo basado en físicas para mejorar el resultado obtenido. Al ser una etapa no interactiva, solo se activa cuando el usuario decide utilizarla. Una vez terminado el proceso, el usuario podrá observar los resultados y almacenar el paciente virtual obtenido que será utilizado en las demás etapas de la \emph{suite} \ac{ITGVPH}.  
 
 %Por último,  ha sido necesaria la adaptación del sistema para poder adecuarse a los formatos de fichero de entrada y salida de los modelos anatómicos. El formato elegido es \ac{X3D} de manera que será utilizados tanto por la herramienta \ac{ITGVPH} como por el simulador \ac{RASim}.
 
@@ -35,19 +35,19 @@ Finalmente, se ha delegado la responsabilidad de generar posiciones correctas o 
 \end{figure}
 
 %Como se ha comentado anteriormente, el usuario puede realizar la fase de posicionamiento de manera semiautomática, dónde es éste el que supervisa y realiza por sí mismo la deformación del modelo anatómico gracias a la interfaz de usuario de la herramienta \ac{TPTVPH} que proporciona una visualización 3D del modelo.
-En la figura \ref{fig:posui} se muestra la interfaz dónde el usuario puede manejar las articulaciones que disponga el paciente virtual para conseguir la posición deseada. Se divide en las siguientes partes: 
+En la figura \ref{fig:posui} se muestra la interfaz d\del{ó}nde el usuario puede manejar las articulaciones que disponga el paciente virtual para conseguir la posición deseada. Se divide en las siguientes partes: 
 \begin{enumerate}
     \item La primera división se permite al usuario seleccionar y manipular las articulaciones por separado. %que servirá para que la herramienta \emph{ITGVPH} actúe de manera automática.
     Además, se podrán cargar configuraciones realizadas previamente o guardar posiciones del modelo en un archivo auxiliar. El usuario es el encargado de que la combinación de uno o más movimientos de articulaciones sean válidas para el entrenamiento del procedimiento médico. 
     \item Esta división sirve para ocultar o mostrar las distintas estructuras anatómicas que se hayan cargado en la aplicación. Esto es especialmente útil si el usuario requiere comprobar cómo se deforma la anatomía interna sin que otros tejidos la oculten. %superiores la oculten.
     \item En la interfaz 3D se puede observar el paciente virtual cargado y, gracias al ratón, el usuario puede navegar en la escena para poder observar el modelo desde cualquier perspectiva. Además, en la barra superior se muestran unos botones que realizan funciones adicionales:
     \begin{enumerate}
-   \item Guarda una instantánea de la escena que el usuario está viendo. 
-   \item Activa la fase de optimización a demanda del usuario. 
-   \item Activa la animación precargada que puede ser utilizada para seleccionar una pose. 
-   \item Permite devolver la cámara de la escena a su posición original. 
-   \item Permite utilizar la tecnología \emph{Microsoft Kinect} para posicionar el modelo anatómico.
-   \item   Permite al usuario terminar con el posicionamiento y cerrar la aplicación.
+   \item Guarda\new{r} una instantánea de la escena que el usuario está viendo. 
+   \item Activa\new{r} la fase de optimización a demanda del usuario. 
+   \item Activa\new{r} la animación precargada que puede ser utilizada para seleccionar una pose. 
+   \item Permit\del{e}\new{ir} devolver la cámara de la escena a su posición original. 
+   \item Permit\del{e}\new{ir} utilizar la tecnología \emph{Microsoft Kinect} para posicionar el modelo anatómico.
+   \item   Permit\del{e}\new{ir} al usuario terminar con el posicionamiento y cerrar la aplicación.
     \end{enumerate}
     
 \end{enumerate}
@@ -113,9 +113,9 @@ En la figura \ref{fig:toolarq} se muestra la arquitectura diseñada para la herr
     \label{fig:toolarq}
 \end{figure}
 
-Hay que destacar que no se integró la tarea 3.4 que se encargaba de la descripción fisiológica. Se decidió no incluir la simulación de la técnica de estimulación eléctrica del nervio en el simulador \ac{RASim}.
+Hay que destacar que no se integró la tarea 3.4 que se encargaba de la descripción fisiológica. Se decidió no incluir la simulación de la técnica de estimulación eléctrica del nervio en el simulador \ac{RASim}\todo{más preciso}.
 
-El proceso comienza con el módulo de registro diseñado por \ac{UKA-IMI}. Se procede a cargar una imagen médica que contiene la anatomía objetivo, procedente de una base de datos que almacena diferentes \ac{DICOM}, además del modelo superficial anatómico de referencia en formato \ac{X3D}. Después, se realiza un registro automático entre la imagen médica y el modelo comercial, dando como resultado un nuevo modelo que será el primer paso para crear un \ac{VPH}. Para más información se puede consultar en \cite{deOliveira:2015}. Este resultado será la entrada de la siguiente etapa.
+El proceso comienza con el módulo de registro diseñado por \ac{UKA-IMI}. Se procede a cargar una imagen médica que contiene la anatomía objetivo, procedente de una base de datos que almacena diferentes\todo{no concuerda en número} \ac{DICOM}, además del modelo superficial anatómico de referencia en formato \ac{X3D}. Después, se realiza un registro automático entre la imagen médica y el modelo comercial, dando como resultado un nuevo modelo que será el primer paso para crear un \ac{VPH}. Para más información se puede consultar en \cite{deOliveira:2015}. Este resultado será la entrada de la siguiente etapa.
 
 La segunda etapa se utiliza el módulo de posicionamiento. Esta etapa se corresponde al objetivo principal de esta tesis ampliamente descrito en el capítulo \ref{cap:posing}. Este recibe el modelo \ac{VPH} que contiene el modelo superficial y la anatomía interna, permitiendo a los usuarios seleccionar y generar posiciones útiles para el entrenamiento.
 
@@ -162,7 +162,7 @@ Tanto el modelo resultante superficial como el modelo volumétrico producidos po
 
 % \end{enumerate}
 
-Es importante remarcar que, aunque las tres etapas crean modelos volumétricos del mismo modelo anatómico, la finalidad de cada uno es diferente y los parámetros difieren según el objetivo de este por lo que no pueden ser compartidos. El detalle y las dimensiones que se consiguen en el módulo de posicionamiento \ac{TPTVPH} son muy superiores a las recomendadas como salida de la tercera etapa, ya que no se van a ejecutar simulaciones físicas sobre esa malla. Además, también se tiene en cuenta el objetivo de que las tareas puedan ser omitidas individualmente y tratadas como cajas negras para no compartir nada más que los datos necesarios para llegar al resultado final.
+Es importante remarcar que, aunque las tres etapas crean modelos volumétricos del mismo modelo anatómico, la finalidad de cada uno es diferente y los parámetros difieren según el objetivo de este\new{,} por lo que no pueden ser compartidos. El detalle y las dimensiones que se consiguen en el módulo de posicionamiento \ac{TPTVPH} son muy superiores a las recomendadas como salida de la tercera etapa, ya que no se van a ejecutar simulaciones físicas sobre esa malla. Además, también se tiene en cuenta el objetivo de que las tareas puedan ser omitidas individualmente y tratadas como cajas negras para no compartir nada más que los datos necesarios para llegar al resultado final.
 
 
 
